Tela de Notificações

--- a/resources/assets/js/views/user/list.html
+++ b/resources/assets/js/views/user/list.html
@@ -3,7 +3,7 @@
         <h1>
             <span class="title-header">
                 <span class="main-title">
-                    <i class="fa fa-user-o"></i> Usuários
+                    <i class="fa fa-user-circle"></i> Usuários
                 </span>
             </span>
             <a href="/#usuario/new" title="Cadastrar" class="btn btn-success pull-right" data-ajax="normal">
